--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^4.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.30.0",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
