--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
+# backend/.env
+
 DB_HOST=127.0.0.1
 DB_USER=rembrandt_user  # the user name created
 DB_PASSWORD=yurygpt  # Password for the user created
@@ -5,3 +7,4 @@ DB_NAME=rembrandt_gallery_db  # Data base name created
 PORT=5000
 GOOGLE_CLIENT_ID=390865377926-hgntnnad8p473i7ugilntfo32bujutb2.apps.googleusercontent.com
 JWT_SECRET=Ifms.mAlG>fs<-6
+MONGODB_URI=mongodb://localhost:27017/rembrandtDB
