--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 # frontend/.env
 
 REACT_APP_GOOGLE_CLIENT_ID=390865377926-hgntnnad8p473i7ugilntfo32bujutb2.apps.googleusercontent.com
+REACT_APP_API_URL=https://rembrandt-gallery-shop.onrender.com
